--- a/package.json
+++ b/package.json
@@ -25,12 +25,31 @@
   "keywords": [
     "compute.io",
     "compute",
-    "computation"
+    "computation",
+    "min",
+    "minimum",
+    "integer",
+    "int",
+    "int8",
+    "int16",
+    "int32",
+    "uint8",
+    "uint16",
+    "uint32",
+    "const",
+    "constant",
+    "util",
+    "utility"
   ],
   "bugs": {
     "url": "https://github.com/compute-io/intmin/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "compute-const-min-int16": "^1.0.0",
+    "compute-const-min-int32": "^1.0.0",
+    "compute-const-min-int8": "^1.0.0",
+    "validate.io-string-primitive": "^1.0.0"
+  },
   "devDependencies": {
     "chai": "2.x.x",
     "mocha": "2.x.x",
